--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-    "name": "dashboard",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon node index.js -w"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "brcypt": "^1.0.1",
-        "connect-mongo": "^4.6.0",
-        "cookie-parser": "^1.4.6",
-        "cors": "^2.8.5",
-        "express": "^4.18.1",
-        "express-session": "^1.17.3",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.3.3",
-        "multer": "^1.4.5-lts.1",
-        "nodemon": "^2.0.16",
-        "sharp": "^0.31.3"
-    }
+  "name": "dashboard",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js -w"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "brcypt": "^1.0.1",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.3",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.16",
+    "sharp": "^0.31.3"
+  }
 }
