Added mongoDB cluster setup

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SECRET_KEY = "bathingatnight"
 PORT = 8000
+MONGO_URI=mongodb+srv://dbNekan:zQTLb7HIHOdfnusv@cluster0.5zq6f24.mongodb.net/dorfville_db
+
