--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
