--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "helmet": "^6.0.1",
+    "imagekit": "^4.1.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "multer": "^1.4.5-lts.1",
